# rocket_program

./: .dockerignore  .gitignore  CHANGELOG.md  COMPLETE_FORMULAS_SUMMARY.md  CURRENT_CAPABILITIES.md  ENGINEERING_UPGRADE_SUMMARY.md  EXTERNAL_TOOLS.md  LICENSE  README.md  ROCKET_DESIGN_README.md  RTM_Report_test.json  RTM_Report_test.md  Reproducible_Run_Pack_Spec_v1.0.md  SAP_DELIVERY_SPEC.md  TEST_RESULTS.md  TRL4_ROADMAP.md  UQ_Sensitivity_Report_v1.0.json  VERIFICATION_REPORT.md  VON_KARMAN_TSIEN_README.md  V_V_EXAMPLE.py  V_V_Report_v1.0.json  V_V_Report_v1.0.md  abaqus_bridge.py  advanced_formulas_example.py  aero_upgrade.py  benchmark_pack.py  build_system_assurance_package.py  calculix_bridge.py  cea_bridge.py  control_bridge.py  coordinate_time_system.py  engineering_formulas_example.py  generate_engineering_reports.py  generate_sap_test_report.py  integrate_real_aero_vv.py  load_cases.py  matlab_bridge.py  mdo_optimizer.py  openfoam_bridge.py  pyproject.toml  (+15 more)
.github/: GITHUB_SETUP.md
benchmark_pack_output/: benchmark_report.json  benchmark_report.md  real_aero_vv_report.json  real_aero_vv_report.md
docs/: ALL_IMPROVEMENTS_COMPLETE.md  CAPABILITIES.md  CURRENT_TEST_STATUS.md  DATA_SOURCES.md  ENGINEERING_FORMULAS_README.md  ENGINEERING_IMPROVEMENTS.md  FINAL_TEST_SUMMARY.md  GOVERNANCE_UPGRADE_COMPLETE.md  README.md  ROCKET_DESIGN_README.md  Reproducible_Run_Pack_Spec_v1.0.md  TRL4_ROADMAP.md  TSIEN_COMPLETE_THEORY.md  V_V_Report_v1.0.md  ml_cantera_note.md  整合工程報告.md
full_design_output/: Design_Report.md  design_summary.json
reproducible_pack/: README.md  artifact_manifest.json  config.json  determinism_checklist.json  model_versions.json  output_summary.json  version_info.json
rocket_design_output/: engine.json  exterior.json
rocket_program/: V_V_EXAMPLE.py  (+42 more)
(+9 files in other folders)
